fix font error update version update style for component and set z-index

--- a/projects/test-app/src/app/app.component.scss
+++ b/projects/test-app/src/app/app.component.scss
@@ -20,4 +20,6 @@
     height: 60px;
     margin: auto 0;
     display: flex;
+
+    font-size: 25px;
 }
